# qoder4ymjh

./: .gitignore  BUILD_STATUS.md  CMakeLists.txt  COMPILE_FIX.md  LOGGING_FEATURE.md  QtDemo.manifest  QtDemo.pro  QtDemo.rc  README.md  UI_OPTIMIZATION_SUMMARY.md  WORKFLOW.md  build-qt.bat  build.bat  build.ps1  build.sh  build_instructions.md  setup-branch-protection.md  setup-code-review.md
.github/: CODEOWNERS
.qoder/quests/: remove-unused-button-and-create-log-window.md
.qoder/repowiki/zh/content/: 快速开始指南.md  构建与部署.md  贡献指南.md  项目概述.md
.qoder/repowiki/zh/content/API参考/: API参考.md  ClickSimulator API参考.md  ColorPicker API参考.md  MainWindow API参考.md  WindowManager API参考.md
.qoder/repowiki/zh/content/功能使用手册/: 功能使用手册.md  点击模拟功能.md  窗口绑定功能.md  颜色拾取功能.md
.qoder/repowiki/zh/content/技术架构详解/: 技术架构详解.md  数据流动路径.md  整体架构设计.md
.qoder/repowiki/zh/content/技术架构详解/模块划分与职责/: ClickSimulator模块.md  ColorPicker模块.md  WindowManager模块.md  模块划分与职责.md
.qoder/repowiki/zh/content/技术架构详解/设计模式应用/: 状态模式思想应用.md  组合模式（模块聚合设计）.md  观察者模式（Qt信号槽机制）.md  设计模式应用.md
.qoder/repowiki/zh/content/核心模块技术设计/: ClickSimulator模块设计.md  ColorPicker模块设计.md  WindowManager模块设计.md  核心模块技术设计.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
.qoder/rules/: use_qt_toolchain.md
include/core/: ClickSimulator.h  ColorPicker.h  CommonTypes.h  CoordinateConverter.h  CoordinateDisplay.h  ImageProcessor.h  InteractionFacade.h  KeyboardSimulator.h  MouseSimulator.h  WindowCapture.h  WindowManager.h
include/ui/: LogWindow.h  MainWindow.h  WindowPreviewPage.h
include/utils/: AsyncLogger.h  Version.h
src/: main.cpp
src/core/: API_OVERVIEW_CORE.md  ClickSimulator.cpp  ColorPicker.cpp  CoordinateConverter.cpp  CoordinateDisplay.cpp  ImageProcessor.cpp  InteractionFacade.cpp  KeyboardSimulator.cpp  MouseSimulator.cpp  WindowCapture.cpp  WindowManager.cpp
src/ui/: API_OVERVIEW_UI.md  LogWindow.cpp  MainWindow.cpp  WindowPreviewPage.cpp
src/utils/: AsyncLogger.cpp  Version.cpp
